2015-03-02  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/osp.c, base/osp.h (osp_param_name, osp_param_type),
	misc/plugutils.c (plug_get_port_transport_name): Remove unused
	functions.

	* base/hash_table_file.c, base/hash_table_file.h: Remove files
	containing unused functions.

	* COPYING, base/CMakeLists.txt: Adjust for hash_table_file.{c,h}
	removal.

2015-03-02  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/openvas_ssh_login.c (file_check_exists, openvas_ssh_login_new)
	(openvas_ssh_login_free, read_from_keyfile)
	(openvas_ssh_login_file_read_buffer): Remove functions.
	(ssh_pkcs8_to_private): New function.
	(openvas_ssh_public_from_private): Support PKCS#8 encrypted ssh keys.

	* misc/openvas_ssh_login.h: Remove unused prototypes and definitions.

2015-02-24  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/openvas_ssh_login.c (openvas_ssh_public_from_private): Add ssh
	key type to the exported public key string.

2015-02-23  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* omp/omp.c (OMP_FMT_STRING_ATTRIB): New function-style macro.
	(omp_get_report_ext): Add new options max_results, host_first_result,
	host_max_results, type, host, pos, timezone, alert_id, delta_report_id,
	delta_states, host_levels, search_phrase, host_search_phrase,
	min_cvss_base, min_qod, notes, notes_details, ignore_pagination.
	(omp_get_system_reports_ext): Add new option slave_id.

	* omp/omp.h (omp_get_report_opts_t): Add fields for new options.
	(omp_get_report_opts_defaults): Initialize report_id, first_result,
	max_results.
	(omp_get_system_reports_opts_t): Add new field slave_id.

2015-02-20  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* omp/omp.c (omp_create_task_ext): Add options alterable,
	hosts_ordering, scanner, schedule, schedule_periods, slave_id,
	in_assets, source_iface, alerts, observers, observer_groups.

	* omp/omp.h: Add #include "../base/array.h".
	(omp_create_task_opts_t): Add new options listed above.
